added surefire plugin and jaxb